force-app/main/default/objects/Bank_Config__c/Bank_Config__c.object-meta.xml
<CustomObject>
    <label>Bank_Config</label>
    <nameField>
        <displayFormat>CONF-{0000}</displayFormat>
        <label>Bank_Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>