force-app/main/default/objects/Bank_Config__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>BankName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>