force-app/main/default/objects/Bank_Config__c/fields/BYNRate__c.field-meta.xml
<CustomField>
    <fullName>BYNRate__c</fullName>
    <label>BYNRate</label>
    <precision>16</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>