force-app/main/default/objects/Bank_Config__c/fields/DepositPrc__c.field-meta.xml
<CustomField>
    <fullName>DepositPrc__c</fullName>
    <label>DepositPrc</label>
    <precision>13</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>